--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -28,7 +29,6 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.1.3",
-    "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
@@ -38,6 +38,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "kill-port": "^1.6.1",
     "nodemon": "^2.0.15",
     "typescript": "~4.5.2"
   }
